Harden callback redirect handling against Address Sonar findings in callback hardening changes